// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initialLetterWrap renders 0 1`] = `
Array [
  .c0 {
  initial-letter-wrap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: 0;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`initialLetterWrap renders function 1`] = `
Array [
  .c0 {
  initial-letter-wrap: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: has;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: has;
}

<div
    className="c0"
  />,
]
`;

exports[`initialLetterWrap renders invalid theme path 1`] = `
Array [
  .c0 {
  initial-letter-wrap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`initialLetterWrap renders negative number 1`] = `
Array [
  .c0 {
  initial-letter-wrap: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`initialLetterWrap renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    initial-letter-wrap: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter-wrap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter-wrap: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    initial-letter-wrap: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    initial-letter-wrap: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter-wrap: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter-wrap: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    initial-letter-wrap: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    initial-letter-wrap: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter-wrap: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter-wrap: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    initial-letter-wrap: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    initial-letter-wrap: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter-wrap: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letter-wrap: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    initial-letter-wrap: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`initialLetterWrap renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    initial-letter-wrap: July;
  }
}

@media April {
  .c0 {
    initial-letter-wrap: August;
  }
}

@media January {
  .c0 {
    initial-letter-wrap: September;
  }
}

@media April {
  .c0 {
    initial-letter-wrap: November;
  }
}

@media June {
  .c0 {
    initial-letter-wrap: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    initial-letter-wrap: July;
  }
}

@media April {
  .c0 {
    initial-letter-wrap: August;
  }
}

@media January {
  .c0 {
    initial-letter-wrap: September;
  }
}

@media April {
  .c0 {
    initial-letter-wrap: November;
  }
}

@media June {
  .c0 {
    initial-letter-wrap: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    initial-letter-wrap: January;
  }
}

@media April {
  .c0 {
    initial-letter-wrap: December;
  }
}

@media January {
  .c0 {
    initial-letter-wrap: April;
  }
}

@media April {
  .c0 {
    initial-letter-wrap: May;
  }
}

@media June {
  .c0 {
    initial-letter-wrap: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    initial-letter-wrap: January;
  }
}

@media April {
  .c0 {
    initial-letter-wrap: December;
  }
}

@media January {
  .c0 {
    initial-letter-wrap: April;
  }
}

@media April {
  .c0 {
    initial-letter-wrap: May;
  }
}

@media June {
  .c0 {
    initial-letter-wrap: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`initialLetterWrap renders postitive number 1`] = `
Array [
  .c0 {
  initial-letter-wrap: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`initialLetterWrap renders string 1`] = `
Array [
  .c0 {
  initial-letter-wrap: July;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: July;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: June;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: June;
}

<div
    className="c0"
  />,
]
`;

exports[`initialLetterWrap renders valid theme path 1`] = `
Array [
  .c0 {
  initial-letter-wrap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letter-wrap: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
